--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -7,3 +7,18 @@
 #greeting-container {
   margin-top: 20px;
 }
+
+body{
+    background-color: #eecfff;
+}
+
+h1{
+    font-size: 40px;
+    font-family: 'Century Gothic';
+    text-align: center;
+}
+
+p{
+    font-size: 20px;
+    font-family: 'Century Gothic';
+}
